--- a/Web Dev Final Project/form-styling.scss
+++ b/Web Dev Final Project/form-styling.scss
@@ -3,7 +3,7 @@ body {
 }
 
 form {
-    color: #e5d549;
+    color: #dddddd;
     text-align: center;
     display: flex;
     justify-content: center;
